more 24w34a progress